# grate-bot

./: .env.example  .gitignore  Cargo.toml  MAINTAINER_SETUP.md  README.md  build.rs
.github/workflows/: ci.yml  deploy-branch.yml  release-main.yml  test-publish.yml
deploy/: deploy-grate-bot.sh  grate-bot.service  hytale-downloader-update.sh  hytale-manage.sh  hytale-update.sh
docs/: GRATEIC.md  HYTALE.md
src/: bot.rs  lib.rs  main.rs  settings.rs
src/features/: hytale.rs  mod.rs
src/features/grateic/: canvas.rs  commands.rs  mod.rs  state.rs
tests/: hytale_downloader_update_parse.bash
