[package]
name = "grate-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
poise = "0.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
