[package]
name = "grate-bot"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
poise = { version = "0.6", default-features = false, features = ["cache", "chrono", "handle_panics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.5", default-features = false, features = ["native_tls_backend"] }
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
